Updating loader and parser code

--- a/langchain/loader_parser.ipynb
+++ b/langchain/loader_parser.ipynb
@@ -19,7 +19,7 @@
       "\n",
       "\n",
       "========== OUTPUT PARSER ==========\n",
-      "{'properties': {'topic': {'description': 'Main topic', 'title': 'Topic', 'type': 'string'}, 'summary': {'description': 'Short summary', 'title': 'Summary', 'type': 'string'}, 'keywords': {'description': 'Important keywords', 'items': {'type': 'string'}, 'title': 'Keywords', 'type': 'array'}}}\n",
+      "{'topic': 'LLM-powered application framework', 'summary': 'Framework for building LLM-powered applications', 'keywords': ['LangChain']}\n",
       "\n",
       "========== OUTPUT FIX PARSER ==========\n",
       "{'topic': 'Natural Language Processing', 'summary': 'LangChain helps developers build AI applications using large language models.', 'keywords': ['NLP', 'AI', 'Language Models']}\n"
@@ -80,8 +80,8 @@
     "\n",
     "    prompt = PromptTemplate(\n",
     "        template=(\n",
-    "            \"Summarize the following text.\\n\"\n",
-    "            \"{format_instructions}\\n\"\n",
+    "            \"{format_instructions}\\n\\n\"\n",
+    "            \"Summarize the following text strictly in JSON format.\\n\"\n",
     "            \"{text}\"\n",
     "        ),\n",
     "        input_variables=[\"text\"],\n",
